# ga-cli

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/ga-cli/: SKILL.md
skills/ga-cli/references/: commands.md
src/ga_cli/: __init__.py  auth.py  cli.py  clients.py  config.py  dates.py  errors.py  filters.py  flatten.py  orders.py  output.py  props.py
src/ga_cli/commands/: __init__.py  accounts.py  admin.py  auth_cmd.py  compat.py  meta.py  presets.py  properties.py  quota.py  realtime.py  report.py  skill_cmd.py
tests/: conftest.py  test_admin_commands.py  test_auth.py  test_dates.py  test_e2e.py  test_errors_contract.py  test_filters.py  test_meta_compat_quota.py  test_orders_flatten.py  test_output.py  test_realtime_presets.py  test_report.py  test_skill.py
tests/golden/: accounts.json  compat.json  custom_dimensions.json  custom_metrics.json  key_events.json  meta.json  properties_get.json  properties_list.json  quota.json  realtime.json  report_compare.json  report_empty.json  report_envelope.json  report_results_only.json  report_totals_quota.json  streams.json
