[project]
name = "ga-cli"
version = "1.0.0"
description = "Agent-native CLI for Google Analytics 4"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sajal Sharma", email = "sajal2692@gmail.com" }]
keywords = ["google-analytics", "ga4", "cli", "analytics", "agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "google-analytics-data>=0.23,<1.0",
    "google-analytics-admin>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/sajal2692/ga-cli"
Changelog = "https://github.com/sajal2692/ga-cli/blob/main/CHANGELOG.md"

[project.scripts]
ga = "ga_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga_cli"]

[tool.hatch.build.targets.wheel.force-include]
"skills/ga-cli" = "ga_cli/_skill"

[tool.hatch.build.targets.sdist]
include = ["src", "skills", "tests", "README.md", "SPEC.md", "CHANGELOG.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["google.*", "proto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: tests that hit the real GA4 APIs (require GA_E2E=1)"]

[tool.coverage.run]
source = ["src/ga_cli"]

[tool.coverage.report]
show_missing = true
